Correction des contraste

--- a/style.css
+++ b/style.css
@@ -735,9 +735,9 @@ h4 {
     margin-top: 24px;
 }
 
-.white {
+/*.white {
     color: #FFFFFF!important;
-}
+}*/
 
 .portfolio-thumb {
     margin-bottom: 24px;
@@ -780,7 +780,7 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: black!important;
 }
 
 .btn-atomic-tangerine:hover {
